feat: update uni -> bidirectional relationship. String id -> UUID id